Update PizzaServiceApplication.java